<resources>
    <string name="app_name">Kittens App</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="second_name_hint">Enter second name</string>
    <string name="tail_length_hint">Enter tail length</string>
    <string name="user_have_no_photos_hint">This kitten don\'t have any photos yet…</string>
    <string name="button_submit">Submit</string>
    <string name="toast_enter_values">Enter all values</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_login_hint">Enter login</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_tail_length_hint">Enter tail length</string>
    <string name="enter_height_hint">Enter height</string>
    <string name="enter_eyes_color_hint">Enter eyes color</string>
    <string name="button_sign_in">Sign in!</string>
    <string name="font_name">Font name</string>
    <string name="font_size">Font size</string>
    <string name="button_sign_up">Sign up!</string>
    <string name="button_log_out">Log out</string>
    <string name="button_show_gallery">Show all photos…</string>
    <string name="button_upload_image">Upload image</string>
    <string name="button_upload_video">Upload video</string>
    <string name="button_font_settings">Delete account</string>
    <string name="button_edit_account">Edit account</string>
    <string name="button_save_changes">Save changes</string>
    <string name="button_apply_changes">Apply</string>
    <string name="button_set_location">Set location</string>
    <string name="button_edit_location">Edit location</string>
    <string name="button_change_language">Change language</string>
    <string name="go_to_sign_in">Go to sign in screen…</string>
    <string name="go_to_sign_up">Go to sign up screen…</string>
    <string name="toast_changes_saved">The changes have been saved</string>
    <string name="toast_auth_failed">Authentication failed</string>
    <string name="toast_edit_failed">Edit failed</string>
    <string name="toast_creation_user_failed">Creation of user failed</string>
    <string name="toast_hello">Hello</string>
    <string name="toast_no_photo_selected">No photo selected</string>
    <string name="toast_file_uploaded">File has been uploaded</string>
    <string name="toast_file_not_uploaded">File has not been uploaded</string>
    <string name="toast_unable_load_data">Permission denied</string>
    <string name="kitten_name">Kitten name</string>
    <string name="kitten_email">Kitten email</string>
    <string name="kitten_tail_length">Tail length</string>
    <string name="kitten_eyes_color">Eyes color</string>
    <string name="kitten_height">Height</string>
    <string name="title_activity_set_location">Map</string>
    <string name="spinner_lower_than">Lower</string>
    <string name="spinner_greater_than">Greater</string>
</resources>