<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChangeFontActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvFontSize"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/font_size" />

            <Spinner
                android:id="@+id/spnFontSizes"
                android:layout_weight="0.8"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvFontName"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/font_name" />

            <Spinner
                android:id="@+id/spnFontNames"
                android:layout_weight="0.8"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginRight="5dp"
                android:id="@+id/btnApplyChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_apply_changes" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>